--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -38,7 +38,7 @@
     color: $black-1;
     display: block;
     font-weight: 600;
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem;
 
     &:hover {
       text-decoration: none;
